# notification-service

./: .dockerignore  .env.example  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: linters.yml
configs/nginx/: nginx.conf
configs/nginx/auth/: .htpasswd
configs/nginx/sites/: default.conf  notification.conf
notification_service/: Dockerfile  Dockerfile.test  alembic.ini  entrypoint-api-test.sh  entrypoint-worker.sh  entrypoint.sh
notification_service/src/: admin.py  handlers.py  main.py
notification_service/src/admin/: __init__.py  views.py
notification_service/src/api/v1/: __init__.py  messages.py  periodic_notifications.py  scheduled_notifications.py  sockets.py  templates.py
notification_service/src/core/: config.py
notification_service/src/db/: db.py  redis.py
notification_service/src/db/migrations/: env.py
notification_service/src/db/migrations/versions/: 001_initial_f739eed7aab7.py  001_initial_initial_7d35a64c4c58.py  automatically_generated_migration_e24b72304029.py  initial_7d35a64c4c58.py  initial_e96f81c97e07.py  initial_f739eed7aab7.py
notification_service/src/domain/: __init__.py
notification_service/src/domain/interfaces/: repositories.py
notification_service/src/enums/: __init__.py  db.py  rabbitmq.py  subscriber_query_enum.py
notification_service/src/exceptions/: auth_exceptions.py  db.py
notification_service/src/models/: __init__.py  base.py  periodic_notification.py  scheduled_notification.py  template.py
notification_service/src/repositories/: __init__.py
notification_service/src/repositories/sql/: base.py  periodic_notification.py  scheduled_notification.py  template.py
notification_service/src/repositories/sql/interfaces/: repositories.py
notification_service/src/schemas/: auth_service.py  messages.py  periodic_notifications.py  scheduled_notifications.py  templates.py
notification_service/src/services/: __init__.py  auth_mock.py  auth_service.py  notification_state.py  priorities.py  rabbitmq.py  subscriber_fetchers.py  subscriber_resolver.py  url_shorter.py
notification_service/src/static/: message_client.html
notification_service/src/tests/: conftest.py  test_messages.py  test_periodic_notifications.py  test_scheduled_notifications.py  test_templates.py
notification_service/src/workers/: __init__.py  base.py  base_worker.py  former.py  main.py  repeater.py  scheduler.py  sheduler.py
notification_service/src/workers/former/: former_worker.py  message_processor.py
notification_service/src/workers/senders/: __init__.py  base.py  email.py
tools/: generate_token.py
