[project]
name = "notifications-sprint-1"
version = "0.1.0"
description = "Notification service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "orjson>=3.10.15",
    "pydantic-settings>=2.7.1",
    "pyjwt[crypto]>=2.10.1",
    "redis>=5.2.1",
    "sentry-sdk>=2.20.0",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.5",
    "sqlalchemy[mypy]>=2.0.38",
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff]
line-length = 119
exclude = [".venv", "./notification_service/src/db/migrations/"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
plugins = [
  "sqlalchemy.ext.mypy.plugin"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
skip = [".venv"]
combine_as_imports = true
balanced_wrapping = true
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["api", "core", "db", "documents", "exceptions", "middlewares", "services", "main", "handlers"]
import_heading_stdlib = "stdlib"
import_heading_thirdparty = "thirdparty"
import_heading_firstparty = "project"
